--- a/.gitignore
+++ b/.gitignore
@@ -89,7 +89,6 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
@@ -130,3 +129,9 @@ dist
 .pnp.*
 
 .idea
+
+# NX
+.nx/
+
+# macOS
+.DS_Store
