feat: create React package with 6 core components
Create @valorcss/react package with TypeScript and Rollup

Package Setup:
- TypeScript 5.7.2 with strict mode
- Rollup 4.24.4 for dual builds (CJS + ESM)
- Latest React 18 type definitions
- NX build configuration with core dependency
- Full type declarations and source maps

Components (6/14):
- Button: variants, sizes, outline, ghost, loading states
- Card: compound component pattern (Header, Body, Footer, Title, Text)
- Badge: pill variant support
- Alert: dismissible with callbacks
- Modal: portal rendering, focus management, size variants
- Toast: queue management, auto-dismiss, multiple positions

Hooks:
- useModal: modal state management with escape key handling
- useToast: toast notifications with ToastProvider and ToastContainer

Features:
- forwardRef support for all components
- Compound component patterns (Card, Modal, Toast)
- Portal rendering for Modal and Toast
- Context-based toast management
- Full TypeScript generics and type safety
- Accessibility attributes (role, aria-label)
- JSDoc comments for IntelliSense
- Tree-shaking support (sideEffects: false)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "ValorCSS Design System - Monorepo",
   "repository": "git@github.com-bolorundurovj:bolorundurovj/ValorCSS.git",
-  "author": "Valiant-Joshua Bolorunduro <valiantjoshuabolorunduro@gmail.com>",
+  "author": "Valiant-Joshua Bolorunduro <mail@gmail.com>",
   "license": "MIT",
   "workspaces": [
     "packages/*"
@@ -12,7 +12,9 @@
   "scripts": {
     "build": "nx run-many -t build",
     "build:core": "nx build @valorcss/core",
+    "build:react": "nx build @valorcss/react",
     "watch:core": "nx watch @valorcss/core",
+    "watch:react": "nx watch @valorcss/react",
     "start": "node index.js",
     "start:dev": "nodemon index.js",
     "test": "nx run-many -t test",
