chore: update dependencies and Yarn lockfile
- Bump various package versions, including Rollup, TypeScript, and related plugins
- Add new dependencies for Rollup plugins and TypeScript enhancements
- Update Yarn lockfile to include resolved versions and integrity hashes

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,7 +18,7 @@
     "tabler",
     "tailwind"
   ],
-  "author": "Valiant-Joshua Bolorunduro <valiantjoshuabolorunduro@gmail.com>",
+  "author": "Valiant-Joshua Bolorunduro <mail@gmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
