feat: make React package self-contained with bundled CSS
- Bundle ValorCSS core styles with React package (valorcss.css)
- Add CSS copy script to build process for automatic bundling
- Update package.json with exports map for CSS files
- Add monorepo scripts for development workflow:
  - pack:react: Create tarball for testing
  - install:example: Install in react-example app
  - setup:example: Complete build and installation
  - dev:example: Run example app
- Update documentation with CSS import instructions
- Explain benefits of separate CSS files (performance, caching, SSR)
- Use tarball installation for example app to avoid Vite symlink issues
- Add react-example/ to .gitignore

--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "start": "node index.js",
     "start:dev": "nodemon index.js",
     "test": "nx run-many -t test",
-    "graph": "nx graph"
+    "graph": "nx graph",
+    "pack:react": "cd packages/react && npm pack",
+    "install:example": "cd react-example && npm uninstall @valorcss/react && npm install ../packages/react/valorcss-react-*.tgz",
+    "setup:example": "npm run build:react && npm run pack:react && npm run install:example",
+    "dev:example": "cd react-example && npm run dev"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^7.0.2",
